menu overlay added

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
     <header>
       <nav class="navbar">
         <div>
-          <img
-            src="andrew-neel-z55CR_d0ayg-unsplash.jpg"
-            alt="explore"
-            class="logo"
-          />
+          <img src="Untitled design.png" alt="explore" class="logo" />
         </div>
-        <div class="hamburger-menu">
+        <div class="hamburger-menu" id="hamburger-menu">
           <div class="line"></div>
           <div class="line"></div>
           <div class="line"></div>
+        </div>
+        <div class="menu-overlay" id="menu-overlay">
+          <ul class="menu-items">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">Prices</a></li>
+            <li><a href="#">About us</a></li>
+          </ul>
         </div>
       </nav>
       <div class="hero">
