smooth transition menu icon

--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
   <body>
     <header>
       <nav class="navbar">
-        <div>
-          <img src="Untitled design.png" alt="explore" class="logo" />
-        </div>
         <div class="hamburger-menu" id="hamburger-menu">
           <div class="line"></div>
           <div class="line"></div>
           <div class="line"></div>
         </div>
+        <div>
+          <img src="Untitled design.png" alt="explore" class="logo" />
+        </div>
         <div class="menu-overlay" id="menu-overlay">
           <ul class="menu-items">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">Prices</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="#">Activitati</a></li>
+            <li><a href="#">Regulament</a></li>
+            <li><a href="#">Tarife</a></li>
+            <li><a href="#">Galerie</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
       </nav>
