main section added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,73 @@
         </div>
       </div>
     </header>
+    <main>
+      <section>
+        <p style="color: rgb(4, 202, 4)">Aventura si distractie</p>
+        <h1 class="title">PARK AVENTURA</h1>
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi quos
+          consequuntur quia! Eum quis voluptas quos praesentium velit
+          perferendis, magni optio omnis. Aliquid eveniet quasi atque? Accusamus
+          quod consectetur qui! Mollitia minima facilis repellendus tempore id
+          ducimus natus illum quos consectetur iure, esse at non, aperiam et.
+          Quia tempora ab hic quo assumenda?
+        </p>
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+          debitis eius corrupti obcaecati doloremque! Deleniti natus itaque
+          deserunt. Delectus suscipit expedita voluptatum assumenda placeat, qui
+          autem aspernatur quaerat corporis commodi.
+        </p>
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, iure
+          nulla laborum consectetur exercitationem illum!
+        </p>
+        <br />
+        <button class="details-button">Detalii ></button>
+      </section>
+      <aside>
+        <h1 class="opening-hours">DESCHIS ZILNIC de la 10:00 la 19:00</h1>
+        <br />
+        <h1 class="opening-hours">ULTIMA INTRARE LA 17:30</h1>
+        <br />
+        <ul class="days">
+          <span>Luni</span>
+          <span class="hours">10:00 - 19:00</span>
+        </ul>
+        <ul class="days">
+          <span>Marti</span
+          ><span class="hours">10:00 - 19:00</span>
+        </ul>
+        <ul class="days">
+          <span>Miercuri</span
+          ><span class="hours">10:00 - 19:00</span>
+        </ul>
+        <ul class="days">
+          <span>Joi</span
+          ><span class="hours">10:00 - 19:00</span>
+        </ul>
+        <ul class="days">
+          <span>Vineri</span
+          ><span class="hours">10:00 - 19:00</span>
+        </ul>
+        <ul class="days">
+          <span>Sambata</span
+          ><span class="hours">10:00 - 19:00</span>
+        </ul>
+        <ul class="days">
+          <span>Duminica</span
+          ><span class="hours">10:00 - 19:00</span>
+        </ul>
+        <br />
+        <h2 class="opening-hours">PROGRAM CASIERIE:</h2>
+        <br />
+        <h2 class="opening-hours">LUNI - DUMINICA DE LA 10:00 LA 17:30</h2>
+      </aside>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
