--- a/index.html
+++ b/index.html
@@ -104,6 +104,38 @@
         <h2 class="opening-hours">LUNI - DUMINICA DE LA 10:00 LA 17:30</h2>
       </aside>
     </main>
+    <section>
+      <div class="wrapper">
+        <div class="grid-layout">
+          <div class="col">
+            <div class="card border-cyan">
+              <h2>Traseu verde</h2>
+              <p>Condiții: Înălțime minim 150 cm</p>
+              <p><strong>55 lei</strong> Bilet individual / 75 min</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-red">
+              <h2>Traseu rosu</h2>
+              <p>Condiții: Înălțime 80 – 114 cm</p>
+              <p><strong>40 lei</strong> Bilet individual / 75 min</p>
+            </div>
+            <div class="card border-orange">
+              <h2>Traseu galben</h2>
+              <p>Condiții: Înălțime: 135 – 159 cm</p>
+              <p><strong>50 lei</strong> Bilet individual / 75 min</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-blue">
+              <h2>Traseu albastru</h2>
+              <p>Condiții: Înălțime minim 150 cm</p>
+              <p><strong>55 lei</strong> Bilet individual / 75 min</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
