--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           nulla laborum consectetur exercitationem illum!
         </p>
         <br />
-        <button class="details-button">Detalii ></button>
+        <button class="details-button"><span>Detalii</span> ></button>
       </section>
       <aside>
         <h1 class="opening-hours">DESCHIS ZILNIC de la 10:00 la 19:00</h1>
